# hotel-management-server

./: Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: CD.yml  CI.yml
src/: database.rs  layer.rs  main.rs  middleware.rs  model.rs  router.rs  service.rs  utils.rs
src/model/: database.rs  database_error.rs  error.rs  imgbb.rs  response.rs  token.rs
src/model/response/: response_message.rs
src/router/: admin.rs  customer.rs  general.rs  public.rs
src/service/: admin.rs  amenity.rs  general.rs  reservation.rs  room.rs  type_room.rs  users.rs
src/service/account/: customer_sign_in.rs  employee_sign_in.rs  get_profile.rs  sign_up.rs  update_profile.rs
src/service/admin/: add_employee.rs  add_user.rs  amenity.rs  list_employee.rs  list_user.rs  room.rs  type_room.rs  update_user.rs  users.rs
src/service/admin/room/: add_room.rs
src/service/amenity/: add_amenity.rs  delete_amenity.rs  list_amenity.rs
src/service/general/: change_password.rs  customer_sign_in.rs  employee_sign_in.rs  get_profile.rs  login.rs  sign_up.rs  signup.rs  update_profile.rs
src/service/reservation/: add_reservation_of_customer.rs  admin.rs  customer.rs  general.rs  list_reservation.rs  list_reservation_of_admin.rs  list_reservation_of_customer.rs
src/service/room/: add_room.rs  delete_room.rs  list_available_room.rs  list_room.rs  room_detail_of_customer.rs  update_room.rs
src/service/type_room/: add_type_room.rs  add_type_room_image.rs  delete_type_room.rs  list_type_room.rs  update_type_room.rs
src/service/users/: add_user.rs  list_user.rs  update_user.rs
(+18 files in other folders)
