[package]
name = "hotel-management-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
axum = { version = "0.7.5", features = ["multipart", "json"] }
axum-extra = {version = "0.9.3", features = ["typed-header"]}
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
postgrest = "1.6.0"
reqwest = { version = "0.11.18", default-features = false, features = ["json"] }
serde = "1.0.202"
serde_json = "1.0.117"
serde_with = "3.8.1"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
